--- a/class-1.html
+++ b/class-1.html
@@ -22,10 +22,13 @@
 <button class="btn btn-outline-warning" onclick="add(20,7)">show ans</button>
 <p id="para2"></p>
 
+<!-- Project -->
+  
+enter the first number   <input type="number" id="number1"><br>
+enter the second number <input type="number" id="number2">
 
-
-
-
+<br>
+<button class="btn btn-outline-info" onclick="calculate()">show answer</button>
 
 
 
